# adventofcode

2019/advent_problems/day05/: input
2019/advent_problems/day06/: problem.md
2019/rust/src/: main.rs
2019/rust/src/advent/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs
2019/rust/src/utils/: errors.rs  files.rs  mod.rs  tape_machine.rs
2019/swift/: main
2021/rust/: Cargo.toml
2021/rust/src/: main.rs
2021/rust/src/advent/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs
2021/rust/src/utils/: mod.rs
2022/rust/: 16.py  Cargo.toml
2022/rust/src/: main.rs  utils.rs
2022/rust/src/advent/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day16_att2.rs  day16_orig.rs  day17.rs  day18.rs  day19 copy.rs  day19.rs  day20.rs  day21.rs
advent_problems/day01/: input
rust/: Cargo.toml  shell.nix
rust/src/: main.rs
rust/src/advent/: day01.rs
rust/src/utils/: errors.rs  files.rs  mod.rs
swift/: main.swift
