[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.*", features = ["derive"] }
eyre = "0.6.8"
flamegraph = "0.6.2"
itertools = "0.10.1"
regex = "1.5.4"

[profile.release]
debug = true